[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2024.10.0",
    "geopandas>=1.0.1",
    "ipywidgets>=7.8.4",
    "keplergl>=0.3.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
]
